:sparkles:  add complex router with react-router-dom 6

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,18 @@
 @import url('./variables.css');
 
 /* Write your global styles here */
+
+html {
+  height: 100%;
+  font-size: 16px;
+}
+
+body {
+  margin: 0;
+  height: 100%;
+  overflow: auto;
+}
+
+#root {
+  height: 100%;
+}
