--- a/src/components/GlobalHeader.css
+++ b/src/components/GlobalHeader.css
@@ -3,13 +3,30 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
 
-.header ul {
-  display: flex;
-  list-style: none;
-}
+  & ul {
+    display: flex;
+    list-style: none;
+  }
 
-.header ul > li {
-  margin-right: 8px;
+  & .navlink {
+    margin-right: 8px;
+    color: gray;
+    text-decoration: none;
+
+    &:focus,
+    &:hover {
+      color: black;
+    }
+
+    &.active {
+      color: red;
+      text-decoration: underline;
+    }
+  }
+
+  & .divider {
+    margin-right: 8px;
+    color: gray;
+  }
 }
